# WebCrawler

./: .gitignore  README.md  bench.sh  docker-compose.test.yml  docker-compose.yml  host_dsn.py  init_schema.py  monitor_ipc.py  plot_bench.py  pyproject.toml  seed_bench.py  seed_db.py  seed_urls.txt
containers/crawler/: Dockerfile  supervisord.conf
containers/crawler/crawler/: pipelines.py  queue_consumer.py  settings.py
containers/scheduler_control/: Dockerfile  supervisord.conf
containers/scheduler_control/accounting/: main.py  service.py
containers/scheduler_ingest/: Dockerfile  supervisord.conf
containers/sitemap_patroller/: Dockerfile  __init__.py  supervisord.conf
docs/: 02-container-runtime-design.md  03-data-flow-and-ipc.md  04-sql-schema-design.md  05-docker-settings-and-deployment.md  06-maintenance-scripts.md  08-sitemap-patroller.md  README.md
libs/ipc/: bus_redis.py  new_link_record.py  queue_scan.py
libs/stats/: delta_writer.py
ops/test/: init-mock-db.sql  supervisord.scheduler_control.conf  supervisord.scheduler_ingest_test.conf
scripts/: init_db.py  migrate_add_discovery_frozen.py  migrate_add_domain_sitemap.py  migrate_add_domain_state_shard_score_index.py  migrate_drop_sched_index.py  migrate_set_fillfactor.py  oneoff_drop_trap_frontier.py  refresh_split_whitelist.py  test_bootstrap_mock_db.py  test_verify_sitemap_e2e.py  update_golden_domain_scores.py
tests/: bench_bus.py  test_golden_discovery_strategy_and_migration.py  test_offerer_service_global_refill.py  test_sitemap_patrol_smoke.py  test_update_golden_domain_scores.py
(+42 files in other folders)
